# sogouzz-submit

./: .gitignore  LICENSE  README.md  config.json  main.py  main.spec  pyproject.toml  requirements.txt
