[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[project]
name = "SAST"
version = "0.1.0"
description = "搜狗站长链接自动化提交"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddddocr>=1.5.6",
    "playwright>=1.51.0",
    "psutil>=7.0.0",
    "pyjson5>=1.6.8",
    "websockets>=15.0.1",
]
